feat: java特性