@@ -63,11 +63,11 @@
             <artifactId>mysql-connector-j</artifactId>
         </dependency>
 
-<!--        &lt;!&ndash; 阿里数据库连接池 &ndash;&gt;-->
-<!--        <dependency>-->
-<!--            <groupId>com.alibaba</groupId>-->
-<!--            <artifactId>druid-spring-boot-starter</artifactId>-->
-<!--        </dependency>-->
+        <!--        &lt;!&ndash; 阿里数据库连接池 &ndash;&gt;-->
+        <!--        <dependency>-->
+        <!--            <groupId>com.alibaba</groupId>-->
+        <!--            <artifactId>druid-spring-boot-starter</artifactId>-->
+        <!--        </dependency>-->
 
         <dependency>
             <groupId>com.alibaba.fastjson2</groupId>
@@ -115,9 +115,9 @@
             <artifactId>guava</artifactId>
         </dependency>
         <!--        <dependency>-->
-<!--            <groupId>org.openjdk.jmh</groupId>-->
-<!--            <artifactId>jmh-generator-annprocess</artifactId>-->
-<!--        </dependency>-->
+        <!--            <groupId>org.openjdk.jmh</groupId>-->
+        <!--            <artifactId>jmh-generator-annprocess</artifactId>-->
+        <!--        </dependency>-->
     </dependencies>
 
     <build>
@@ -137,11 +137,17 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
-                    <source>${java.version}</source>
-                    <target>${java.version}</target>
+                    <source>19</source>
+                    <target>19</target>
                     <release>${java.version}</release>
                     <compilerArgs>
                         <arg>--enable-preview</arg>
+                        <arg>--add-modules</arg>
+                        <arg>jdk.incubator.concurrent</arg>
+                        <!--                        <arg>&#45;&#45;add-modules</arg>-->
+                        <!--                        <arg>jdk.incubator.foreign</arg>-->
+                        <arg>--add-modules</arg>
+                        <arg>jdk.incubator.vector</arg>
                     </compilerArgs>
                 </configuration>
             </plugin>
